[gd_scene load_steps=4 format=2]

[ext_resource path="res://entity/fx/explosion.gd" type="Script" id=1]
[ext_resource path="res://assets/light.png" type="Texture" id=2]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 180.0
flatness = 0.23
gravity = Vector3( 0, 97, 0 )
initial_velocity = 425.73
initial_velocity_random = 0.72
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
color = Color( 0.168627, 0.337255, 0.984314, 1 )

[node name="explosion" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 100
lifetime = 0.5
local_coords = false
process_material = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer_death" type="Timer" parent="."]
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -2.38419e-07, -3.8147e-06 )
scale = Vector2( 1.18, 1.18 )
texture = ExtResource( 2 )
color = Color( 0.960784, 0.32549, 0.0784314, 1 )
energy = 1.4

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_death" to="." method="_on_Timer_death_timeout"]
